--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -7,10 +7,14 @@ source:
 
 build:
   number: 0
+  features:
+    - vc14 [win and py35]
+    - vc14 [win and py36]
 
 requirements:
   build:
-    - vc 14 # [win]
+    - python
+    - vc 14 [win]
     - cmake
     - ninja
     - pybind11
@@ -19,7 +23,8 @@ requirements:
     - netgen4smesh 6.2.0
 
   run:
-    - vc 14 # [win]
+    - python
+    - vc 14 [win]
     - occt 7.2.0
     - smesh 8.3.0
     - netgen4smesh 6.2.0
