Update CI for conda-forge -Set version to track OCCT -Use Netgen and SMESH from conda-forge channel -Added import tests
Former-commit-id: 1b6c36f7d9b06246816f44c2ed3915d7b2281edc

--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -18,19 +18,24 @@ requirements:
     - cmake
     - ninja
     - pybind11
-    - occt ==7.2.0
-    - vtk ==8.1.0
-    - smesh ==8.3.0 # [win]
-    - netgen4smesh ==6.2.0 # [win]
+    - occt ==7.2.*
+    - vtk ==8.1.*
+    - smesh ==8.3.*
+    - netgen ==6.2.*
 
   run:
     - python
     - wxpython
     - vc 14 # [win]
-    - occt ==7.2.0
-    - vtk ==8.1.0
-    - smesh ==8.3.0 # [win]
-    - netgen4smesh ==6.2.0 # [win]
+    - occt ==7.2.*
+    - vtk ==8.1.*
+    - smesh ==8.3.*
+    - netgen ==6.2.*
+
+test:
+  imports:
+    - OCCT
+    - OCCT.TopoDS
 
 about:
   home: https://github.com/LaughlinResearch/pyOCCT
