Specify explicit version in metal.yaml
Former-commit-id: c0327c604b17fa910ce9c5476e9300ad621d47c3

--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -18,19 +18,19 @@ requirements:
     - cmake
     - ninja
     - pybind11
-    - occt ==7.2.*
-    - vtk ==8.1.*
-    - smesh ==8.3.*
-    - netgen ==6.2.*
+    - occt ==7.2.0
+    - vtk ==8.1.0
+    - smesh ==8.3.0b0
+    - netgen ==6.2.1802
 
   run:
     - python
     - wxpython
     - vc 14 # [win]
-    - occt ==7.2.*
-    - vtk ==8.1.*
-    - smesh ==8.3.*
-    - netgen ==6.2.*
+    - occt ==7.2.0
+    - vtk ==8.1.0
+    - smesh ==8.3.0b0
+    - netgen ==6.2.1802
 
 test:
   imports:
