Add Anaconda upload to Travis-CI
Former-commit-id: 072a0eea88d0c2cd69b906943d640493ba1ea1f4

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,3 +35,6 @@ before_install:
 
 script:
   - conda build ci/conda
+
+after_success:
+  - anaconda -t $CONDA_UPLOAD_TOKEN upload $HOME/travis/miniconda/conda-bld/linux-64/*.bz2 -l master --force
