Run unittest during conda build
Former-commit-id: 1994e806d6f50a19074a7d3c97ef869b85a5cefd

--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -33,9 +33,8 @@ requirements:
     - netgen ==6.2.1802
 
 test:
-  imports:
-    - OCCT
-    - OCCT.TopoDS
+  source_files:
+    - test
 
 about:
   home: https://github.com/LaughlinResearch/pyOCCT
