Add import tests in meta.yaml
Former-commit-id: 2f47940bf78780a7f2c5dca6c419ac971815f4f1

--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -33,6 +33,13 @@ requirements:
     - netgen ==6.2.1804
 
 test:
+  imports:
+    - OCCT
+    - OCCT.gp
+    - OCCT.TopoDS
+    - OCCT.SMESH
+    - OCCT.StdMeshers
+    - OCCT.NETGENPlugin
   source_files:
     - test
 
