Move binder data into project (#45)
Former-commit-id: 3f6730b8cd492e2bc1ee02747c886ad33d07a9e4

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,8 @@ jobs:
 
       - name: "Clone pyOCCT"
         uses: actions/checkout@v2
-
-      - name: "Clone binder"
-        run: git clone https://github.com/LaughlinResearch/pyOCCT_binder.git binder
+        with:
+          submodules: 'recursive'
 
       - name: "Add conda to PATH"
         if: matrix.os == 'windows-latest'
