Supply python version when setting up conda environment - Still some builds picking up the wrong python version...
Former-commit-id: aa8436b3d5fb48a02b1bc1ac13580fad21513e57

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
         with:
           auto-update-conda: true
           environment-file: build_env.yml
+          python-version: ${{ matrix.python-version }}
           activate-environment: pyOCCT
 
       - name: "Check conda"
