Don't activate base environment and call which python for sanity check
Former-commit-id: 7b3e051b89886bbb60feba08020fed693fb6ee8b

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,9 +78,10 @@ jobs:
         with:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
-          activate-environment: pyOCCT
           channels: conda-forge
           conda-build-version: 3.19.2
+          auto-activate-base: false
+          activate-environment: pyOCCT
 
       - name: "Check conda"
         shell: bash -l {0}
@@ -88,6 +89,7 @@ jobs:
           conda activate pyOCCT
           conda info -a
           conda list
+          which python
 
       - name: "Download binding sources"
         uses: actions/download-artifact@v2
