More adjustments to build environment to try and get right python version
Former-commit-id: cf4795da68a74202dbfdb89ab5b2bef55aa30e6b

--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -10,7 +10,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('cxx') }} # [win]
+    - {{ compiler('cxx') }}
     - cmake
     - ninja
 
@@ -22,7 +22,7 @@ requirements:
     - tbb-devel
 
   run:
-    - python {{ python }}
+    - python
     - occt ==7.4.0
     - smesh ==8.3.0.3
 
@@ -34,6 +34,5 @@ about:
   home: https://github.com/LaughlinResearch/pyOCCT
   license: LGPL2.1
   license_family: LGPL
-  summary: Python bindings for OpenCASCADE
-  description: Python bindings for OpenCASCADE geometry kernel
-               and SMESH meshing library.
+  summary: Python bindings for OpenCASCADE and SMESH
+  description: Python bindings for OpenCASCADE geometry kernel and SMESH meshing library.
