Minor build adjustments and updated README (#52)
* Minor build adjustments and updated README

* At least attempt to generate the macos bindings for anyone who can help...

Former-commit-id: 4becc643c4ee0c3babbc01a9ffd1edafbe86b68d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ project(pyOCCT VERSION 7.4.0.0 LANGUAGES CXX)
 # --------------------------------------------------------------------------- #
 # OPTIONS
 # --------------------------------------------------------------------------- #
-option(ENABLE_SMESH "Enable SMESH" OFF)
-option(ENABLE_NETGEN "Enable Netgen" OFF)
+option(ENABLE_SMESH "Enable SMESH" ON)
+option(ENABLE_NETGEN "Enable Netgen" ON)
 option(ENABLE_VTK "Enable VTK" OFF)
 option(ENABLE_WARNINGS "Disable warning output." OFF)
 
