--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - '*'
 jobs:
-  generate:
+  generate_linux:
     name: Generate (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
@@ -17,7 +17,6 @@ jobs:
     steps:
 
       - name: "Install OpenGL"
-        if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get -q -y install libglu1-mesa-dev libgl1-mesa-dev libxi-dev libglfw3-dev libgles2-mesa-dev
@@ -95,9 +94,9 @@ jobs:
           name: pyocct_src_${{ matrix.os }}
           path: src/occt
 
-  build:
+  build_linux:
     name: Build (${{ matrix.python-version }}, ${{ matrix.os }})
-    needs: generate
+    needs: generate_linux
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -107,7 +106,6 @@ jobs:
     steps:
 
       - name: "Install OpenGL"
-        if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get -q -y install libglu1-mesa-dev libgl1-mesa-dev libxi-dev libglfw3-dev libgles2-mesa-dev
@@ -189,3 +187,105 @@ jobs:
         with:
           name: pyocct-py${{ matrix.python-version }}_${{ matrix.os }}
           path: conda
+
+  generate_macos:
+    name: Generate (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ['macos-latest']
+    steps:
+
+      - name: "Clone pyOCCT"
+        uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+
+      - name: "Add conda to PATH"
+        run: echo "::add-path::$CONDA/bin"
+
+      - name: "MacOS fix"
+        run: sudo chown -R $USER $CONDA
+
+      - name: "Configure conda"
+        shell: pwsh
+        run: |
+          conda init --all
+          conda env create -f binder/environment.yml
+
+      - name: "Check conda"
+        shell: pwsh
+        run: |
+          conda activate binder
+          conda info -a
+          conda list
+
+      - name: "Generate bindings"
+        shell: pwsh
+        run: |
+          conda activate binder
+          python binder/run.py -c binder/config.txt -o src/occt
+
+      - name: "Upload bindings"
+        uses: actions/upload-artifact@v2
+        with:
+          name: pyocct_src_${{ matrix.os }}
+          path: src/occt
+
+#  build_macos:
+#    name: Build (${{ matrix.python-version }}, ${{ matrix.os }})
+#    needs: generate_macos
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        os: ['macos-latest']
+#        python-version: ['3.6', '3.7', '3.8']
+#    steps:
+#
+#      - name: "Clone pyOCCT"
+#        uses: actions/checkout@v2
+#
+#      - name: "Add conda to PATH"
+#        run: echo "::add-path::$CONDA/bin"
+#
+#      - name: "MacOS fix"
+#        run: |
+#          sudo chown -R $USER $CONDA
+#          curl -o  MacOSX10.9.sdk.tar.xz -L https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.9.sdk.tar.xz
+#          tar xf MacOSX10.9.sdk.tar.xz
+#          sudo mv -v MacOSX10.9.sdk /opt/
+#
+#      - name: "Configure conda"
+#        shell: pwsh
+#        run: conda init --all
+#
+#      - name: "Install conda build"
+#        shell: pwsh
+#        run: conda install -c conda-forge conda-build
+#
+#      - name: "Check conda"
+#        shell: pwsh
+#        run: |
+#          conda info -a
+#          conda list
+#
+#      - name: "Download binding sources"
+#        uses: actions/download-artifact@v2
+#        with:
+#          name: pyocct_src_${{ matrix.os }}
+#          path: src/occt
+#
+#      - name: "Run conda build"
+#        shell: pwsh
+#        run: |
+#          mkdir conda
+#          conda activate
+#          conda build  ci/conda -c conda-forge --python ${{ matrix.python-version }} --output-folder conda
+#
+#      - name: "Upload conda package"
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: pyocct-py${{ matrix.python-version }}_${{ matrix.os }}
+#          path: conda
