Update ci.yml (#56)
Workaround for #54

Former-commit-id: 1c354c2ffb92f5c49d0a4f1c7a26a6483c8b2b9f

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -q -y install libglu1-mesa-dev libgl1-mesa-dev libxi-dev libglfw3-dev libgles2-mesa-dev
+      
+      - name: "Prepare VM"
+        run: |
+          sudo rm -Rf /home/linuxbrew/
 
       - name: "Clone pyOCCT"
         uses: actions/checkout@v2
@@ -109,7 +113,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -q -y install libglu1-mesa-dev libgl1-mesa-dev libxi-dev libglfw3-dev libgles2-mesa-dev
-
+      
+      - name: "Prepare VM"
+        run: sudo rm -Rf /home/linuxbrew/
+      
       - name: "Clone pyOCCT"
         uses: actions/checkout@v2
 
