--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,12 @@ on:
   pull_request:
     branches:
       - '*'
+  release:
+    types: [published]
+
 jobs:
   generate_linux:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Generate (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
@@ -56,6 +60,7 @@ jobs:
           path: src/occt
 
   generate_win:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Generate (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
@@ -99,6 +104,7 @@ jobs:
           path: src/occt
 
   build_linux:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Build (${{ matrix.python-version }}, ${{ matrix.os }})
     needs: generate_linux
     runs-on: ${{ matrix.os }}
@@ -149,6 +155,7 @@ jobs:
           path: conda
 
   build_win:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Build (${{ matrix.python-version }}, ${{ matrix.os }})
     needs: generate_win
     runs-on: ${{ matrix.os }}
@@ -196,6 +203,7 @@ jobs:
           path: conda
 
   generate_macos:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Generate (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
@@ -241,6 +249,7 @@ jobs:
           path: src/occt
 
 #  build_macos:
+#    if: "!contains(github.event.head_commit.message, 'skip ci')"
 #    name: Build (${{ matrix.python-version }}, ${{ matrix.os }})
 #    needs: generate_macos
 #    runs-on: ${{ matrix.os }}
