Use smesh4pyocct (#59)
Former-commit-id: 4f72e58b69bcf8c1af0ec15446b65231fff2a44e

--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -18,13 +18,13 @@ requirements:
     - python
     - pybind11
     - occt ==7.4.0
-    - smesh ==8.3.0.3
+    - smesh4pyocct ==8.3.0.3
     - tbb-devel
 
   run:
     - python
     - occt ==7.4.0
-    - smesh ==8.3.0.3
+    - smesh4pyocct ==8.3.0.3
 
 test:
   source_files:
