Update copyright and target trelau git repos
Former-commit-id: 18e6e7781f680d6401bbc5abc51a47e38af3f0b2

--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -31,7 +31,7 @@ test:
     - test
 
 about:
-  home: https://github.com/LaughlinResearch/pyOCCT
+  home: https://github.com/trelau/pyOCCT
   license: LGPL2.1
   license_family: LGPL
   summary: Python bindings for OpenCASCADE and SMESH
